RESOLVED FIXED195491
AsyncStackTrace can be shrunk by 8 bytes
https://bugs.webkit.org/show_bug.cgi?id=195491
Summary AsyncStackTrace can be shrunk by 8 bytes
Robin Morisset
Reported 2019-03-08 16:12:25 PST
By making the enum AsyncStackTrace::State take 8 bits instead of 32.
Attachments
Patch (1.06 KB, patch)
2019-03-08 16:13 PST, Robin Morisset
no flags
Robin Morisset
Comment 1 2019-03-08 16:13:31 PST
WebKit Commit Bot
Comment 2 2019-03-09 09:24:22 PST
Comment on attachment 364086 [details] Patch Clearing flags on attachment: 364086 Committed r242672: <https://trac.webkit.org/changeset/242672>
WebKit Commit Bot
Comment 3 2019-03-09 09:24:23 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-03-09 09:25:22 PST
Note You need to log in before you can comment on or make changes to this bug.