AsyncStackTrace can be shrunk by 8 bytes https://bugs.webkit.org/show_bug.cgi?id=195491

Reviewed by Mark Lam.

* inspector/AsyncStackTrace.h:


Canonical link: https://commits.webkit.org/209806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242672 268f45cc-cd09-0410-ab3c-d52691b4dbfc